# thames

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh  configure.sh  run.sh
app/: CMakeLists.txt  cowell.cpp  geqoe.cpp  thames_cowell_discrete_point.cpp  thames_cowell_polynomial.cpp  thames_cowell_polynomial_point.cpp  thames_geqoe_discrete_point.cpp  thames_geqoe_polynomial.cpp  thames_geqoe_polynomial_point.cpp  thames_main.cpp
batch/: .gitignore  batch.py  batch_nstep.py  thames_batch.py  thames_batch_converter.py  thames_batch_json.py
batch/output/: .gitignore
batch/pythames/: __init__.py  dataclasses.py  interface.py  permutations.py  statistics.py
doc/html/: CMakeLists_8txt.html  J2_8cpp.html  J2_8cpp__incl.dot  J2_8h.html  J2_8h__dep__incl.dot  J2_8h__incl.dot  J2_8h_source.html  README_8md.html  angles_8cpp.html  angles_8cpp__incl.dot  angles_8h.html  angles_8h__dep__incl.dot  angles_8h_source.html  annotated.html  arithmeticoverloads_8cpp.html  arithmeticoverloads_8cpp__incl.dot  arithmeticoverloads_8h.html  arithmeticoverloads_8h__dep__incl.dot  arithmeticoverloads_8h__incl.dot  arithmeticoverloads_8h_source.html  baseperturbation_8cpp.html  baseperturbation_8cpp__incl.dot  baseperturbation_8h.html  baseperturbation_8h__dep__incl.dot  baseperturbation_8h__incl.dot  baseperturbation_8h_source.html  basepropagator_8h.html  basepropagator_8h__dep__incl.dot  basepropagator_8h__incl.dot  basepropagator_8h_source.html  cartesian_8cpp.html  cartesian_8cpp__incl.dot  cartesian_8h.html  cartesian_8h__dep__incl.dot  cartesian_8h__incl.dot  cartesian_8h_source.html  classes.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbation-members.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbation.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbationPolynomial-members.html  (+349 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+61 more)
docs/: CMakeLists_8txt.html  J2_8cpp.html  J2_8cpp__incl.map  J2_8cpp__incl.md5  J2_8h.html  J2_8h__dep__incl.map  J2_8h__incl.md5  J2_8h_source.html  README_8md.html  angles_8cpp.html  angles_8cpp__incl.md5  angles_8h.html  angles_8h__dep__incl.md5  angles_8h_source.html  annotated.html  arithmeticoverloads_8cpp.html  arithmeticoverloads_8h.html  arithmeticoverloads_8h__dep__incl.md5  arithmeticoverloads_8h_source.html  baseperturbation_8cpp.html  baseperturbation_8cpp__incl.map  baseperturbation_8h.html  baseperturbation_8h__dep__incl.map  baseperturbation_8h__dep__incl.md5  baseperturbation_8h__incl.map  baseperturbation_8h__incl.md5  baseperturbation_8h_source.html  basepropagator_8h.html  basepropagator_8h__dep__incl.md5  basepropagator_8h__incl.map  basepropagator_8h__incl.md5  basepropagator_8h_source.html  cartesian_8cpp.html  cartesian_8cpp__incl.md5  cartesian_8h.html  cartesian_8h_source.html  classes.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbation-members.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbation.html  classthames_1_1perturbations_1_1baseperturbation_1_1BasePerturbationPolynomial-members.html  (+241 more)
docs/html/: CMakeLists_8txt.html  J2_8cpp.html  J2_8cpp__incl.map  J2_8cpp__incl.md5  J2_8cpp_source.html  J2_8h.html  J2_8h__dep__incl.md5  J2_8h__incl.map  J2_8h__incl.md5  J2_8h_source.html  README_8md.html  angles_8cpp.html  angles_8cpp__incl.map  angles_8cpp_source.html  angles_8h.html  angles_8h__dep__incl.map  angles_8h_source.html  annotated.html  arithmeticoverloads_8cpp.html  arithmeticoverloads_8cpp__incl.map  arithmeticoverloads_8cpp__incl.md5  arithmeticoverloads_8cpp_source.html  arithmeticoverloads_8h.html  arithmeticoverloads_8h__dep__incl.map  arithmeticoverloads_8h__dep__incl.md5  arithmeticoverloads_8h__incl.map  arithmeticoverloads_8h__incl.md5  arithmeticoverloads_8h_source.html  atmospheremodel_8cpp.html  atmospheremodel_8cpp__incl.map  atmospheremodel_8cpp__incl.md5  atmospheremodel_8cpp_source.html  atmospheremodel_8h.html  atmospheremodel_8h__dep__incl.map  atmospheremodel_8h__dep__incl.md5  atmospheremodel_8h__incl.map  atmospheremodel_8h__incl.md5  atmospheremodel_8h_source.html  baseatmospheremodel_8cpp.html  baseatmospheremodel_8cpp__incl.map  (+633 more)
docs/search/: all_10.js  all_14.js  all_f.js  files_10.js  functions_c.js  variables_0.js  variables_7.js
include/: thames.h
include/constants/: constants.h  earth.h  statetypes.h
include/conversions/: conversions.h  dimensional.h  geqoe.h  keplerian.h  polynomial.h  universal.h
include/io/: io.h  json.h  point.h  polynomial.h
include/perturbations/: baseperturbation.h  perturbationcombiner.h  perturbations.h
include/propagators/: basepropagator.h  cowell.h  geqoe.h  options.h  propagators.h
include/settings/: settings.h
include/vector/: arithmeticoverloads.h  geometry.h
src/: CMakeLists.txt  main.cpp  thames.h  types.h
src/constants/: constants.h  earth.h  statetypes.h
src/conversions/: cartesian.cpp  cartesian.h  conversions.h  dimensional.cpp  dimensional.h  geqoe.cpp  geqoe.h  keplerian.cpp  keplerian.h  polynomial.cpp  state.cpp  state.h  universal.cpp  util.cpp  util.h
src/io/: io.h  json.cpp  point.cpp  point.h  polynomial.cpp  polynomial.h
src/perturbations/: baseperturbation.cpp  baseperturbation.h  geopotential.cpp  geopotential.h  perturbationcombiner.cpp  perturbations.h
src/perturbations/atmosphere/: atmospheremodel.cpp  baseatmospheremodel.cpp  drag.cpp  ussa76.cpp  wertz.cpp  wertze.cpp  wertzp.cpp  wertzp1.cpp  wertzp5.cpp
src/perturbations/geopotential/: J2.cpp  J2.h  geopotential.cpp  geopotential.h
src/propagators/: basepropagator.cpp  basepropagator.h  cowell.cpp  cowell.h  geqoe.cpp  geqoe.h  propagators.h
src/util/: angles.cpp  angles.h  optimise.cpp  optimise.h  polynomials.cpp  polynomials.h  root.cpp  root.h  sampling.cpp  sampling.h  util.h  vector.cpp  vector.h
src/vector/: arithmeticoverloads.cpp  arithmeticoverloads.h  geometry.cpp  geometry.h  vector.h
(+104 files in other folders)
